--- a/CSS/menus.css
+++ b/CSS/menus.css
@@ -1,5 +1,51 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
+@keyframes heart {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes apparition {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes dish {
+  0% {
+    opacity: 0;
+    transform: rotate(0deg);
+  }
+  25% {
+    opacity: 1;
+    transform: rotate(90deg);
+  }
+  50% {
+    opacity: 1;
+    transform: rotate(180deg);
+  }
+  75% {
+    opacity: 1;
+    transform: rotate(270deg);
+  }
+  100% {
+    opacity: 1;
+    transform: rotate(360deg);
+  }
+}
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -41,26 +87,40 @@ img {
   z-index: 1;
   position: relative;
   border-radius: 32px 32px 0 0;
-  height: 1100px;
+  height: 1200px;
   margin-bottom: 32px;
 }
 .menu h1 {
   font-family: "Shrikhand", cursive;
   padding: 16px;
   font-size: 1.5rem;
-  margin-left: 48px;
+  margin-left: 5px;
 }
-.menu .fa-heart {
+.menu .menu_heart {
+  display: flex;
+  justify-content: space-between;
+  right: 30px;
+  font-size: 22px;
+}
+.menu .menu_heart .fa-stack {
+  display: flex;
+  font-size: 24px;
+  top: 15px;
+  right: 15px;
+  width: 24px;
+  height: 24px;
   color: black;
-  right: 65px;
-  top: 4%;
-  transform: translateY(-80%);
-  position: absolute;
-  font-size: 1.5rem;
+  cursor: pointer;
 }
-.menu .fa-heart:hover {
-  color: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-  transition-duration: 1s;
+.menu .menu_heart .fa-stack .bgnone {
+  opacity: 0;
+}
+.menu .menu_heart .fa-stack:hover i {
+  animation: heart 600ms forwards;
+  background: linear-gradient(#9356dc, #ff79da);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .menu .title {
   width: 95%;
@@ -80,100 +140,100 @@ img {
     margin-left: 16px;
   }
 }
-
-.menu_carte {
+.menu .btn_carte {
+  display: flex;
+  overflow: hidden;
+  background-color: #fff;
+  border-radius: 15px;
+  padding-left: 15px;
+  height: 80px;
+  margin-bottom: 20px;
+  transform: scale(1);
   cursor: pointer;
-  border-radius: 25px;
-  padding-left: 16px;
-  margin-left: 32px;
-  width: 90%;
-  height: 80px;
-  gap: 16px;
+}
+@media (max-width: 992px) {
+  .menu .btn_carte {
+    width: 85%;
+    margin-left: 43px;
+  }
+}
+@media (max-width: 768px) {
+  .menu .btn_carte {
+    width: 85%;
+    margin-left: 22px;
+  }
+}
+.menu .btn_carte:hover {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  transform: scale(1.03);
+  transition: 350ms;
+}
+.menu .btn_carte:hover .btn__body__favorite {
+  width: 15%;
+}
+@media (max-width: 992px) {
+  .menu .btn_carte:hover .btn__body__favorite {
+    width: 20%;
+  }
+}
+@media (max-width: 768px) {
+  .menu .btn_carte:hover .btn__body__favorite {
+    width: 20%;
+  }
+}
+.menu .btn_carte:hover .btn__body__favorite .fa-circle-check {
+  animation: rotate 1000ms forwards;
+}
+.menu .btn_carte .btn__body__favorite {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 16px;
-  background-color: white;
+  background: #99e2d0;
+  height: 100%;
+  order: 2;
+  width: 0%;
+  transition: all 550ms cubic-bezier(0.47, 0.15, 0, 1);
 }
-.menu_carte:h2 {
-  padding: 16px;
+.menu .btn_carte .btn__body .fa-circle-check {
+  font-size: 24px;
+  color: #fff;
 }
-@media (max-width: 768px) {
-  .menu_carte {
-    margin-left: 20px;
-    padding-left: 0px;
-  }
-}
-.menu_carte .menu_titre {
-  padding-right: 16px;
+.menu .btn_carte .btn__body__gras {
+  display: flex;
+  flex-flow: column;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   width: 100%;
-  overflow: hidden;
 }
-@media (max-width: 768px) {
-  .menu_carte .menu_titre {
-    margin-left: 16px;
-  }
-}
-.menu_carte p {
-  margin-top: -16px;
-}
-.menu_carte .menu_price {
-  height: 79px;
-  margin-bottom: 30px;
-  margin-right: 24px;
-}
-.menu_carte h5 {
-  margin-top: 48px;
-  font-weight: bold;
-  font-size: 16px;
-}
-
-.box {
-  margin-right: -4.5rem;
-  overflow: hidden;
-  opacity: 1;
-  text-align: center;
-  background: #99E2D0;
-  border-radius: 0 25px 25px 0;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  height: 80px;
-  width: 80px;
-}
-.box .check {
-  background-color: #99e2d0;
-  height: 79px;
-  opacity: 1;
-  color: white;
+.menu .btn_carte .btn__body {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 0 25px 25px 0;
-  font-size: 32px;
-  animation-name: boxanimation;
-  animation-duration: 2s;
-  transform: rotate(360deg);
-  transition: transform 500ms, -webkit-transform 500ms;
+  width: 100%;
 }
-.box .check:hover {
-  animation: boxanimation 1s;
-  -webkit-transition: width 2s;
-  -o-transition: width 2s;
-  transition: width 2s;
-  animation-name: boxanimation;
-  animation-duration: 2s;
+.menu .btn_carte .btn__body h3 {
+  font-family: roboto, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 0;
 }
-@keyframes boxanimation {
-  0% {
-    width: 0px;
-  }
-  50% {
-    width: 75px;
-  }
-  100% {
-    width: 0px;
-  }
+.menu .btn_carte .btn__body p {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: roboto, sans-serif;
+  font-size: 14px;
+}
+.menu .btn_carte .btn__price {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  font-family: roboto, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  height: 100%;
+  padding-right: 15px;
 }
 
 .btn {
@@ -193,6 +253,9 @@ img {
     width: 40%;
     margin-left: 30%;
   }
+}
+.btn:hover {
+  transform: scale(1);
 }
 
 .footer {
