--- a/SCSS/menus.scss
+++ b/SCSS/menus.scss
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 @import "./libs/mixins.scss";
 @import "./libs/variables.scss";
+@import "./libs/animations.scss";
+
 
 body {
     margin: 0;
@@ -32,33 +34,46 @@ header {
             max-height: 12rem;
             width: 100%;
             object-fit: cover;
-            }
-               
+            }       
 .menu {
     margin-top: -3.5rem;
     background-color: $secondarygrey;
     z-index: 1;
     position: relative;
     border-radius: $p32 $p32 0 0;
-    height: 1100px;
+    height: 1200px;
     margin-bottom: $p32;
-  
     h1 {
         font-family: $fontsecondary;
         padding: $p16;
         font-size: 1.5rem;
-        margin-left: $p48;
+        margin-left: 5px;
         }
-    .fa-heart {
-            @include color;
-            right: 65px;
-            top: 4%;
-            transform: translateY(-80%);
-            position: absolute;
-            font-size: 1.5rem;
-            &:hover {
-               color: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-                transition-duration: 1s;}}
+.menu_heart {
+  display: flex;
+  justify-content: space-between;
+  right: 30px;
+  font-size: 22px;
+    .fa-stack {
+      display: flex;
+      font-size: 24px;
+  top: 15px;
+  right: 15px;
+  width: 24px;
+  height: 24px;
+  color: black;
+  cursor: pointer;
+}
+.fa-stack .bgnone {
+  opacity: 0;
+}
+.fa-stack:hover i {
+  animation: heart 600ms forwards;
+  background: linear-gradient(#9356dc, #ff79da);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}}
      
 .title {
     width: 95%;
@@ -70,95 +85,90 @@ header {
         margin-left: $p16;}
         @include mob {
             margin-left: $p16;}
-        }}
+        }
+.btn_carte {
+  display: flex;
+  overflow: hidden;
+  background-color: #fff;
+  border-radius: 15px;
+  padding-left: 15px;
+  height: 80px;
+  margin-bottom: 20px;
+  transform: scale(1);
+  cursor: pointer;
+  @include tab {
+    width: 85%;
+    margin-left: 43px;}
+  @include mob {
+    width: 85%;
+    margin-left: 22px;
+    }   
+&:hover {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  transform: scale(1.03);
+  transition: 350ms;
+}
+&:hover .btn__body__favorite {
+  width: 15%;
+  @include tab {
+  width: 20%;}
+  @include mob {
+  width: 20%;}
+        }
 
-.menu_carte {
-    cursor: pointer;
-    border-radius: $p25;
-    padding-left: $p16;
-    margin-left: $p32;
-    width: 90%;
-    height: 80px;
-    gap: $p16;
-    @include display;
-    margin-bottom: $p16;
-    background-color: white; 
-    &:h2 {
-    padding: $p16;
-    }
-    @include mob {
-        margin-left: 20px;
-        padding-left: 0px;
-    }
-
-.menu_titre {
-    padding-right: $p16;
-    width: 100%;
-    overflow: hidden;
-    @include mob {
-    margin-left: $p16;}
+&:hover .btn__body__favorite .fa-circle-check {
+  animation: rotate 1000ms forwards;
+}
+.btn__body__favorite {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #99e2d0;
+  height: 100%;
+  order: 2;
+  width: 0%;
+  transition: all 550ms cubic-bezier(0.47, 0.15, 0, 1);
+}
+.btn__body .fa-circle-check {
+  font-size: 24px;
+  color: #fff;
+}
+.btn__body__gras {
+  display: flex;
+  flex-flow: column;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+}
+.btn__body {
+  display: flex;
+  width: 100%;
+  h3 {
+  font-family: roboto, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 0;
 }
   p {
-    margin-top: -$p16;
-}
-  .menu_price 
-    {
-    height: 79px;
-    margin-bottom: 30px;
-    margin-right: 24px;
-    }
-    
-    h5 {
-   margin-top: $p48;
-   font-weight: bold;
-   font-size: $p16;
-    }
-    }
-    .box {
-margin-right: -4.5rem;
-overflow: hidden;
-opacity: 1;
-text-align: center;
-background: #99E2D0;
-border-radius: 0 $p25 $p25 0;
--webkit-box-align: center;
--ms-flex-align: center;
-align-items: center;
-height: 80px;
-width: 80px;
-
-    .check {
-    background-color: $green;
-    height: 79px;
-    opacity: 1;
-    color: $wcolor;
-    @include display;
-    border-radius: 0 $p25 $p25 0;
-    font-size: $p32;
-    animation-name: boxanimation;
-    animation-duration: 2s;
-    transform: rotate(360deg);
-    transition: transform 500ms, -webkit-transform 500ms;
-    &:hover {
-animation: boxanimation 1s;
--webkit-transition: width 2s;
--o-transition: width 2s;
-transition: width 2s;
-animation-name: boxanimation;
-animation-duration: 2s;
-    @keyframes boxanimation {
-  0% {
-    width: 0px;
-  }
-  50% {
-    width: 75px;
-  }
-  100% {
-    width: 0px;
-  }
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: roboto, sans-serif;
+  font-size: 14px;
 }}
-}}
-    
+.btn__price {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  font-family: roboto, sans-serif;
+  font-size: $p16;
+  font-weight: bold;
+  height: 100%;
+  padding-right: 15px;
+}}}
 .btn {
     font-size: $p32 - 2px;
     background-image: $radiant;
@@ -172,76 +182,82 @@ animation-duration: 2s;
     margin-bottom: $p32;
     @include mob {
         width: 40%;
-        margin-left: 30%;}}
+        margin-left: 30%;}
+  &:hover {
+    transform: scale(1)
+    
+    }
+    
+}
 
  .footer {
   @include display;
   background-color: $darkgrey;
-   @include mob {
+  @include mob {
     padding-right: 170px;
     font-size: $p16 - 4px;
   }
-  .ustensils {
-  color: $wcolor;
-  margin-left: $p16;
-  @include display;
-  gap: $p16;
-  padding: 0.1rem;
-  text-decoration:none;
-  @include mob {
-  margin-left: -3px;
-  width: 100%;}}
-
-  .help {  
-  color: $wcolor;
-  margin-left: $p16;
-  @include display;
-  gap: $p16;
-  padding: 0.1rem;
-  text-decoration:none;
-  @include mob {
-  margin-left: -29px;
-  gap: 9px;}
-}
+    .ustensils {
+      color: $wcolor;
+      margin-left: $p16;
+      @include display;
+      gap: $p16;
+      padding: 0.1rem;
+      text-decoration:none;
+        @include mob {
+        margin-left: -3px;
+        width: 100%;}
+    }
+    .help {  
+      color: $wcolor;
+      margin-left: $p16;
+      @include display;
+      gap: $p16;
+      padding: 0.1rem;
+      text-decoration:none;
+      @include mob {
+      margin-left: -29px;
+      gap: 9px;}
+    }
   .fas {
-    @include mob
-    { font-size: $p16;
-      }}
+    @include mob {
+    font-size: $p16;
+    }}
   .mentions {
     color: $wcolor;
-  margin-left: $p16;
-  @include display;
-  padding: 0.1rem;
-  text-decoration:none;
-  @include mob {
-  margin-left: -64px;
+    margin-left: $p16;
+    @include display;
+    padding: 0.1rem;
+    text-decoration:none;
+    @include mob {
+    margin-left: -64px;
     }}
   .mail {
     color: $wcolor;
-  margin-left: $p16;
-  @include display;
-  gap: 16px;
-  padding: 0.1rem;
-  text-decoration:none;
-  @include mob {
-  margin-left: -111px;}
-}
+    margin-left: $p16;
+    @include display;
+    gap: 16px;
+    padding: 0.1rem;
+    text-decoration:none;
+    @include mob {
+    margin-left: -111px;}
+  }
 .footer_container {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: $p32 + 4px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: $p32 + 4px;
+  }
+  h3 {
+    font-family: $fontsecondary;
+    text-align: center;
+    position: relative;
+    color: $wcolor;
+    margin-left: $p32;
+    @include display;
+    font-size: $p32 - 7px;
+    margin-bottom: -0.1rem;
+    @include mob {
+    margin-left: -$p48 - 2;
+    font-size: $p16;
+  }}
 }
-h3 {
-  font-family: $fontsecondary;
-  text-align: center;
-  position: relative;
-  color: $wcolor;
-  margin-left: $p32;
-  @include display;
-  font-size: $p32 - 7px;
-  margin-bottom: -0.1rem;
-  @include mob {
-  margin-left: -$p48 - 2;
-  font-size: $p16;
-}}
- }
