--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -2,12 +2,39 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
 @import "libs/mixins.scss";
 @import "libs/variables.scss";
-@import "./libs/animations.scss";
+
 
 body {
   margin: 0;
   font-family: $fontprimary;
 }
+// loader
+.loader {
+  border: 10px solid grey;
+  border-top: 10px solid  rgba(147, 86, 220, 0.9);
+  border-bottom: 10px solid rgba(255, 121, 218, 0.9);
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  margin: auto;
+  -webkit-animation: spin 3s linear infinite;
+  -o-animation: spin 3s linear infinite;
+  animation: spin 3s linear forwards;
+  @keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    } 
+  100% {
+    transform: rotate(360deg);
+    }
+    }
+  position: absolute;
+  top: 0; 
+  bottom: 0;
+  left: 0;
+  right: 0;
+  }
+//
 
 header {
   font-family: $fontsecondary;
@@ -339,62 +366,4 @@ i {
   margin-left: -$p48 - 2;
   font-size: $p16;
 }
-}
-
-.loader {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  position: absolute;
-}
-.loader:before {
-  content: "";
-  width: 10px;
-  height: 70px;
-  background: #fff;
-  display: inline-block;
-  transform-origin: bottom center;
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
-  box-shadow:5px 10px 20px inset #000000;
-  animation: loader 10s forwards;
-}
-.bar1 {
-  animation-delay: 0.1s;
-}
-.bar2 {
-  animation-delay: 0.2s;
-}
-.bar3 {
-  animation-delay: 0.3s;
-}
-.bar4 {
-  animation-delay: 0.4s;
-}
-.bar5 {
-  animation-delay: 0.5s;
-}
-.bar6 {
-  animation-delay: 0.6s;
-}
-.bar7 {
-  animation-delay: 0.7s;
-}
-.bar8 {
-  animation-delay: 0.8s;
-}
-
-@keyframes loader {
-  0% {
-    transform: scaleY(0.1);
-    background: violet;
-  }
-  50% {
-    transform: scaleY(1);
-    background: yellowgreen;
-  }
-  100% {
-    transform: scaleY(0.1);
-    background: transparent;
-  }
 }
